i think i fixed the scrolling on mobile now XD

--- a/src/components/TasksSide/style.css
+++ b/src/components/TasksSide/style.css
@@ -99,7 +99,7 @@
 @media (max-width:376px) and (max-height:813px){
 	/* iphone x */
   .all-tasks-cont{
-    max-height: 470px;
+    max-height: 450px;
   }
 }
 
